--- a/index.html
+++ b/index.html
@@ -5,17 +5,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/main.css">
-    <script src="script/logic.js"></script>
+    <script src="script/logic.js" async></script>
     <title>JS Calculator</title>
 </head>
 
 <body>
-    <header>
+    <header style="text-align: center;">
         <h1>JS Calculator</h1>
     </header>
     <main>
         <section>
+            <div class="screen">
+                <span class="counter">0</span>
+            </div>
+            <div class="calc-container">
 
+                <button class="operator">C</button>
+                <button class="operator"> Bck </button>
+
+                <button id="btn1">1</button><button id="btn2">2</button><button id="btn3">3</button><button
+                    id="btn4">4</button><button id="btn5">5</button><button id="btn6">6</button><button
+                    id="btn7">7</button><button id="btn8">8</button><button id="btn9">9</button>
+                <button id="btn0">0</button>
+                <button id="btn.">.</button>
+
+                <button class="operator">+</button>
+                <button class="operator">-</button>
+                <button class="operator">/</button>
+                <button class="operator">x</button>
+                <button class="operator">=</button>
+
+
+
+            </div>
         </section>
     </main>
     <footer>
